--- a/public/index.html
+++ b/public/index.html
@@ -1,63 +1,24 @@
 <!DOCTYPE html>
 
-<html>
-  <head>
-    <meta charset="UTF-8" />
-    <style>
-      html{
-	  font-size:16px;
-      }
+<html lang="fr">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Redirect to new url</title>
+        <link href="style.css" rel="stylesheet" type="text/css" />
+        <!--
+        <script crossorigin src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
+        <script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
+        -->
+        <script src="https://unpkg.com/react@18.2.0/umd/react.development.js" crossorigin></script>
+        <script src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.development.js" crossorigin></script>
 
-      *{
-	  font-size:1rem;
-	  font-family:monospace;
-      }
-
-      body{
-	  margin:1rem;
-      }
-
-      table td input{
-	  width:100%;
-      }
-
-      .delete{
-	  background-color:rgba(255,0,0,0.5);
-	  color:white;
-      }
-    </style>
-  </head>
-
-  <body>
-    <table id="redirect_table">
-      <tbody>
-	<tr id="header">
-	  <th>Source (Regex)</th>
-	  <th>Target (URL Pattern)</th>
-	  <th></th>
-	</tr>
-      </tbody>
-    </table>
-
-    <button id="new_entry_btn">New Entry</button>
-    
-    <div>
-      <p>URL Pattern Options</p>
-      
-      <ul>
-	<li>[protocol] - Protocol (ie. 'http://')</li>
-	<li>[subdomain] - Subdomain (ie. 'mail.', 'www.')</li>
-	<li>[domain] - Domain name (ie. 'google')</li>
-	<li>[tld] - Top level domain (ie. '.com', '.ca')</li>
-	<li>[hostname] - Hostname (ie. 'mail.google.ca')</li>
-	<li>[host] - Hostname + Port (ie. 'mail.google.ca:8080')</li>
-	<li>[pathname] - Path (ie. '/about/me')</li>
-	<li>[port] - Port (ie. ':8080')</li>
-	<li>[searchParams] - Query parameters (ie. '?user=bob')</li>
-	<li>[username] - Username (ie. 'thomas')</li>
-      </ul>
-    </div>
-
-    <script src="regex-redirect.js"></script>
-  </body>
+        <script src="https://unpkg.com/babel-standalone@6.26.0/babel.min.js"></script>
+    </head>
+    <body>
+        <noscript>You need to enable JavaScript to run this app.</noscript>
+        <div id="redirect-entry-point"></div>
+        <script src="regex-redirect.js" type="text/babel"></script>
+    </body>
 </html>
