--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
-
 <html lang="fr">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Redirect to new url</title>
-        <link href="style.css" rel="stylesheet" type="text/css" />
+        <link href="static/style.css" rel="stylesheet" type="text/css" />
         <!--
         <script crossorigin src="https://unpkg.com/react@18.2.0/umd/react.production.min.js"></script>
         <script crossorigin src="https://unpkg.com/react-dom@18.2.0/umd/react-dom.production.min.js"></script>
@@ -19,6 +18,6 @@
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
         <div id="redirect-entry-point"></div>
-        <script src="regex-redirect.js" type="text/babel"></script>
+        <script src="static/regex-redirect.js" type="text/babel"></script>
     </body>
 </html>
